@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-14T08:29:56Z",
+  "timestamp" : "2022-10-14T16:33:01Z",
   "count_outdated" : 2495,
   "uniques_outdated" : 639,
-  "count" : 2523,
-  "uniques" : 657,
+  "count" : 2526,
+  "uniques" : 659,
   "clones" : [
     {
       "timestamp": "2022-09-30T00:00:00Z",
@@ -70,10 +70,10 @@
     },
     {
       "timestamp": "2022-10-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ]
     }
   ]
 }
