@@ -1,6 +1,6 @@
 {
-  "count": 28,
-  "uniques": 10,
+  "count": 31,
+  "uniques": 12,
   "clones": [
     {
       "timestamp": "2022-09-30T00:00:00Z",
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-10-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
