@@ -1,3 +1,11 @@
+2022-10-14T16:33:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3251496034 # 935
+* notice: last 14d: unq all: 12 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 639 2495 / 657 2523
+* notice: next accum: outdated-unq outdated-all / unq all: 639 2495 / 659 2526
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [] / [2022-10-14]
+
 2022-10-14T08:29:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3248522583 # 934
 * notice: last 14d: unq all: 10 28
